# O2GPU-autotuner

./: README.md  analyze.py  analyze_tuning.py  config.yaml  count_SM_AMD  count_SM_Nvidia  create_dump.py  defaultParamsAMD.h  multiple_studies.py  new_tune_params.sh  optimise.py  pyproject.toml  read_results.py  rlhs.py  run_optuna.py  try_csv_parser.py  try_timer.py  tune.py  tune_params.sh
O2GPU_autotuner/: analyze.py  orchestrator.py  step_tuner.py  tune.py
O2GPU_autotuner/benchmark_backend/: __init__.py  benchmarkBackend.py
O2GPU_autotuner/defaults/: defaultParamsAMD.h  defaultParamsNVIDIA.h
O2GPU_autotuner/tune_spaces/: clusterizer.yaml  compressionStep1unattached.yaml  mergerCollect.yaml  mergerSectorRefit.yaml  mergerTrackFit.yaml  multikernel.yaml  tracklet.yaml
benchmark_backend/: benchmarkBackend.py
tune_spaces/: clusterizer.yaml  compressionStep1unattached.yaml  mergerCollect.yaml  mergerSectorRefit.yaml  mergerTrackFit.yaml  multikernel.yaml  tracklet.yaml
tune_spaces/H100/: clusterizer.yaml  compressionStep1unattached.yaml  mergerCollect.yaml  mergerSectorRefit.yaml  mergerTrackFit.yaml  multikernel.yaml  tracklet.yaml
tune_spaces/L40S/: clusterizer.yaml  compressionStep1unattached.yaml  mergerCollect.yaml  mergerSectorRefit.yaml  mergerTrackFit.yaml  multikernel.yaml  tracklet.yaml
tune_spaces/MI100/: clusterizer.yaml  compressionStep1unattached.yaml  mergerCollect.yaml  mergerSectorRefit.yaml  mergerTrackFit.yaml  multikernel.yaml  tracklet.yaml
tune_spaces/MI210/: clusterizer.yaml  compressionStep1unattached.yaml  mergerCollect.yaml  (+4 more)
(+28 files in other folders)
